--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -270,4 +270,17 @@
             <input type = "submit" id = "submit" name = "submit" style = "visibility: hidden;">
         </form>
     </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+    <script>
+        function myfunct(pk){
+        var to = prompt("enter your name","");
+        console.log(to);
+        console.log(pk);
+         var URL="{% url 'send'  %}"
+         console.log(URL);
+         var data={'to':to,'pk':pk , 'csrfmiddlewaretoken': '{{ csrf_token }}'}
+        $.post(URL,data);
+        }
+    </script>
 </html>
