--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -168,14 +168,14 @@
         <form id="index_form" name="index_form" action="." method="POST">
         {% csrf_token %}
 
-        <div class="grid grid-cols-2 grid-rows-1 text-white my-3 divide-x-2 custom-scrollbar">
+        <div class="grid lg:grid-cols-2 grid-rows-1 text-white my-3 divide-x-2 custom-scrollbar">
             <div class="left_form relative bg-white p-6 h-full rounded">
 
                 <!-- top card starts -->
-                <div class=" flex pt-0 px-0  relative inline-block text-left">
-                    <span class="rounded-md shadow-sm ">
-                        <button class="rounded inline-flex justify-between items-center  pl-3 py-2 pr-5 text-sm font-medium leading-5 text-gray-700 transition duration-150 ease-in-out  border border-gray-300 rounded-md hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800" 
-                                type="button" onclick="myFunction()" aria-haspopup="true" aria-expanded="true" aria-controls="headlessui-menu-items-117" style="width: auto; background: #FF5200; fill-opacity: 100%;">
+                <div class=" flex pt-0 px-0 w-full relative inline-block text-left">
+                    <div class="rounded-md w-full shadow-sm ">
+                        <div class="rounded w-full inline-flex justify-between items-center  pl-3 py-2 pr-5 text-sm font-medium leading-5 text-gray-700 transition duration-150 ease-in-out  border border-gray-300 rounded-md hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue active:bg-gray-50 active:text-gray-800" 
+                                style=" background: #FF5200; fill-opacity: 100%;">
                                 <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path opacity="0.4" d="M25.1617 12.6961C24.5597 12.6961 23.7623 12.6828 22.7695 12.6828C20.3483 12.6828 18.3574 10.6788 18.3574 8.23478V3.94678C18.3574 3.60944 18.0881 3.33478 17.754 3.33478H10.7015C7.41021 3.33478 4.74998 6.03611 4.74998 9.34678V23.7134C4.74998 27.1868 7.53695 30.0014 10.9761 30.0014H21.4784C24.7578 30.0014 27.4167 27.3174 27.4167 24.0041V13.2961C27.4167 12.9574 27.1486 12.6841 26.8133 12.6854C26.2496 12.6894 25.5736 12.6961 25.1617 12.6961Z" fill="#FFFFFF"/>
                                     <path opacity="0.4" d="M21.5287 4.09119C21.13 3.67652 20.434 3.96186 20.434 4.53652V8.05252C20.434 9.52719 21.6487 10.7405 23.1233 10.7405C24.0527 10.7512 25.3433 10.7539 26.4393 10.7512C27.0007 10.7499 27.286 10.0792 26.8967 9.67386C25.49 8.21119 22.9713 5.58986 21.5287 4.09119Z" fill="#FFFFFF"/>
@@ -185,12 +185,15 @@
                                 <span class="flex text-lg not-italic font-semibold leading-6 tracking-normal text-white">Resume name</span>
                                 <span class="static left-0 bottom-0 not-italic font-normal text-sm leading-5  text-gray-100 flex-none order-1 flex-grow-0">Last updated on 11th May</span>
                             </div>
-                            <svg width="18" height="20" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path opacity="0.4" d="M16.6433 7.48844C16.6433 7.55644 16.1104 14.2972 15.806 17.1341C15.6154 18.875 14.493 19.931 12.8095 19.961C11.516 19.99 10.2498 20 9.00394 20C7.68127 20 6.38778 19.99 5.13221 19.961C3.50513 19.922 2.38183 18.845 2.20094 17.1341C1.88778 14.2872 1.36454 7.55644 1.35482 7.48844C1.34509 7.28345 1.41123 7.08846 1.54544 6.93046C1.67771 6.78447 1.86833 6.69647 2.06867 6.69647H15.9392C16.1386 6.69647 16.3195 6.78447 16.4624 6.93046C16.5957 7.08846 16.6628 7.28345 16.6433 7.48844Z" fill="#FEFEFE"/>
-                            <path d="M18 3.97686C18 3.56588 17.6761 3.24389 17.2871 3.24389H14.3714C13.7781 3.24389 13.2627 2.8219 13.1304 2.22692L12.967 1.49795C12.7385 0.616978 11.9498 0 11.0647 0H6.93624C6.0415 0 5.26054 0.616978 5.02323 1.54595L4.87054 2.22792C4.7373 2.8219 4.22185 3.24389 3.62957 3.24389H0.713853C0.32386 3.24389 0 3.56588 0 3.97686V4.35685C0 4.75783 0.32386 5.08982 0.713853 5.08982H17.2871C17.6761 5.08982 18 4.75783 18 4.35685V3.97686Z" fill="#FEFEFE"/>
-                            </svg>  
-                        </button>
-                    </span>
+                            <!-- <button class="p-3 focus:outline-none" 
+                                onclick="delete_resume('{{resume.id}}','{{resume}}')">
+                                <svg width="18" height="20" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path opacity="0.4" d="M16.6433 7.48844C16.6433 7.55644 16.1104 14.2972 15.806 17.1341C15.6154 18.875 14.493 19.931 12.8095 19.961C11.516 19.99 10.2498 20 9.00394 20C7.68127 20 6.38778 19.99 5.13221 19.961C3.50513 19.922 2.38183 18.845 2.20094 17.1341C1.88778 14.2872 1.36454 7.55644 1.35482 7.48844C1.34509 7.28345 1.41123 7.08846 1.54544 6.93046C1.67771 6.78447 1.86833 6.69647 2.06867 6.69647H15.9392C16.1386 6.69647 16.3195 6.78447 16.4624 6.93046C16.5957 7.08846 16.6628 7.28345 16.6433 7.48844Z" fill="#FEFEFE"/>
+                                <path d="M18 3.97686C18 3.56588 17.6761 3.24389 17.2871 3.24389H14.3714C13.7781 3.24389 13.2627 2.8219 13.1304 2.22692L12.967 1.49795C12.7385 0.616978 11.9498 0 11.0647 0H6.93624C6.0415 0 5.26054 0.616978 5.02323 1.54595L4.87054 2.22792C4.7373 2.8219 4.22185 3.24389 3.62957 3.24389H0.713853C0.32386 3.24389 0 3.56588 0 3.97686V4.35685C0 4.75783 0.32386 5.08982 0.713853 5.08982H17.2871C17.6761 5.08982 18 4.75783 18 4.35685V3.97686Z" fill="#FEFEFE"/>
+                                </svg> 
+                            </button>  -->
+                        </div>
+                    </div>
                 </div>
                 <!-- top card ends -->
                 <div class="relative flex-column mt-12 ml-6 mb-12  text-black font-bold" style="font-family: Open Sans;">
