home page on logo clicking

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -149,10 +149,10 @@
 
         <div class="relative items-center bg-white">
             <div class=" flex flex-row justify-between w-full px-3 py-2">
-                <p class=" ex" style="font-family:'Pacifico'; font-size:30px ">OpenResumes</p>
+                <a href="{% url 'home' %}" class=" ex" style="font-family:'Pacifico'; font-size:30px ">OpenResumes</a>
 
-                <p class="absolute px-2 inset-12 text-xs my-1.5 mx-2 text-gray-500" style="color: #ADA3A5; font-family: 'Product Sans';">by</p>
-                <p class="absolute px-6 inset-12 text-xs font-bold my-1.5 mx-2 text-gray-500" style="color: #ADA3A5; font-family: 'Product Sans';">SWC</p>
+                <a href = "{% url 'home' %}" class="absolute px-2 inset-12 text-xs my-1.5 mx-2 text-gray-500" style="color: #ADA3A5; font-family: 'Product Sans';">by</a>
+                <a href = "{% url 'home' %}" class="absolute px-6 inset-12 text-xs font-bold my-1.5 mx-2 text-gray-500" style="color: #ADA3A5; font-family: 'Product Sans';">SWC</a>
                 <div class="flex items-center  rounded-md hover:bg-gray-100 focus:ring-1 px-6 py-2">
                     <a href="{% url 'django_auth_adfs:logout' %}" class="font-extrabold text-xs text-gray-900">
                         <svg class="h-8 w-8 text-gray-600 hover:text-black" viewBox="0 0 24 24" stroke-width="1.2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
