--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -27,19 +27,13 @@
             visibility: visible;
         }
         .ex {
-            /* background-clip: text;
-            text-fill-color: transparent;
-            background: conic-gradient(from 105.59deg at 1.12% 53.34%, #FF5200 -0.59deg, #72147E 0.44deg, #FF5200 359.41deg, #72147E 360.44deg); */
-            /* Create the gradient. */
-            /* #72147E, 100% */
-            /* #FF5200, 100% */
-        
-            /* Create the gradient. */
+         
             background-image:   linear-gradient(
-                                15deg,
-                                #72147E ,
-                                #FF5200  
+                                60deg,
+                                rgba(114, 20, 129, 1) ,                  
+                                rgba(255, 82, 0, 1) 
                                 );
+            /* margin: 6px 0px 0px 0.8rem; */
             font-weight: 400;
             background-size: 100%;
             background-repeat: repeat;
@@ -92,9 +86,9 @@
     <body>
         <div class="max-w-max  items-center  grid grid-cols-1 divide-y divide-blue-5 m-2 bg-white">
             <div class="flex flex-row justify-between w-screen px-3 py-2">
-                <p class="ex" style="font-family:'Pacifico'; font-size:30px ">OpenResumes</p>
-                <p class="absolute px-2 inset-12 text-xs my-1.5 mx-2 text-gray-500" style="color: #ADA3A5; font-family: 'Product Sans';">by</p>
-                <p class="absolute px-6 inset-12 text-xs font-bold my-1.5 mx-2 text-gray-500" style="color: #ADA3A5; font-family: 'Product Sans';">SWC</p>
+                <a href = "{% url 'home' %}" class="ex" style="font-family:'Pacifico'; font-size:30px ">OpenResumes</a>
+                <a href = "{% url 'home' %}" class="absolute px-2 inset-12 text-xs my-1.5 mx-2 text-gray-500" style="color: #ADA3A5; font-family: 'Product Sans';">by</a>
+                <a href = "{% url 'home' %}" class="absolute px-6 inset-12 text-xs font-bold my-1.5 mx-2 text-gray-500" style="color: #ADA3A5; font-family: 'Product Sans';">SWC</a>
                 <div class="flex items-center  rounded-md hover:bg-gray-100 focus:ring-1 px-6 py-2">
                     <a href="{% url 'django_auth_adfs:logout' %}" class="font-extrabold text-xs text-gray-900">
                         <svg class="h-8 w-8 text-gray-600 hover:text-black" viewBox="0 0 24 24" stroke-width="1.2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
