--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -187,10 +187,27 @@
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0485 15.8516H16.5619C17.1099 15.8516 17.5552 15.4076 17.5552 14.8596C17.5552 14.3116 17.1099 13.8662 16.5619 13.8662H12.0485C11.5005 13.8662 11.0565 14.3116 11.0565 14.8596C11.0565 15.4076 11.5005 15.8516 12.0485 15.8516ZM12.0486 22.5105H19.3073C19.8553 22.5105 20.3006 22.0665 20.3006 21.5185C20.3006 20.9705 19.8553 20.5252 19.3073 20.5252H12.0486C11.5006 20.5252 11.0566 20.9705 11.0566 21.5185C11.0566 22.0665 11.5006 22.5105 12.0486 22.5105Z" fill="#FFFFFF"/>
                                 </svg>   
                             <div class="flex-column text-left w-full px-4">
-                                <span class="flex text-lg not-italic font-semibold leading-6 tracking-normal text-white">Resume name</span>
-                                <span class="static left-0 bottom-0 not-italic font-normal text-sm leading-5  text-gray-100 flex-none order-1 flex-grow-0">Last updated on 11th May</span>
+                                <span class="flex text-lg not-italic font-semibold leading-6 tracking-normal text-white">
+                                    {{resume.name}}
+                                </span>
+                                <span class="static left-0 bottom-0 not-italic font-normal text-sm leading-5  text-gray-100 flex-none order-1 flex-grow-0">
+                                    Last updated on 11th May
+                                </span>
                             </div>
-                            <button class="p-3 focus:outline-none" 
+                            <a href="{% static 'pdfs/' %}{{resume.pdfFile}}" download  style = "color: white;">PDF</a>
+                            <a class="pr-5 " href="{% static 'pdfs/' %}{{resume.pdfFile}}" download >
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="white">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                                </svg>
+                            </a>
+
+                            <a href="{% static 'latex/' %}{{resume.latexFile}}" download style="color: white;">LaTex</a>
+                            <a class="pr-6"  href = "{% static 'latex/' %}{{resume.latexFile}}" download>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="white">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                                </svg>
+                            </a>
+                            <button class="pr-5 focus:outline-none" 
                                 onclick="delete_resume()">
                                 <svg width="18" height="20" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path opacity="0.4" d="M16.6433 7.48844C16.6433 7.55644 16.1104 14.2972 15.806 17.1341C15.6154 18.875 14.493 19.931 12.8095 19.961C11.516 19.99 10.2498 20 9.00394 20C7.68127 20 6.38778 19.99 5.13221 19.961C3.50513 19.922 2.38183 18.845 2.20094 17.1341C1.88778 14.2872 1.36454 7.55644 1.35482 7.48844C1.34509 7.28345 1.41123 7.08846 1.54544 6.93046C1.67771 6.78447 1.86833 6.69647 2.06867 6.69647H15.9392C16.1386 6.69647 16.3195 6.78447 16.4624 6.93046C16.5957 7.08846 16.6628 7.28345 16.6433 7.48844Z" fill="#FEFEFE"/>
