updates view, templates

--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -81,6 +81,16 @@
            }
            return true;
         }
+        duplicate = function(ind, name){
+            name += ' copy';
+            document.getElementById("duplicate_resume_id").value = ind;
+            document.getElementById("duplicate_resume_name").value = name;
+            document.getElementById("submit").click();
+            // alert(ind +" "+ name);
+        }
+        function myFunction(){
+            alert("ddff");
+        }
     </script>
 </head>
     <body>
@@ -141,14 +151,23 @@
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
                                             </svg>
                                         </a>
+                                       
                                         <span role="menuitem" tabindex="-1" class="flex justify-between px-4 py-2 text-sm leading-5 text-left text-gray-700 cursor-not-allowed opacity-50" aria-disabled="true">Share (soon)</span>
-                                    </div>
-                                    <div class="py-1" style="font-family: 'Open Sans';">
-                                        <button type = "button" onclick="delete_resume('{{resume.id}}','{{resume}}')" tabindex="3" class="text-gray-700 flex justify-between  px-4 py-2 text-sm leading-5 text-left"  role="menuitem" style="color: red;">
-                                            Delete
+                                        
+                                        <button type = "button" onclick="duplicate('{{resume.id}}', '{{resume}}')" tabindex="3"
+                                        class="text-gray-700 flex justify-between  px-4 py-2 text-sm leading-5 text-left focus:outline-none"  role="menuitem" style="color: green;">
+                                           <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="green">
+                                               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+                                           </svg>
+                                           Duplicate
+                                       </button>
+                                        <button type = "button" onclick="delete_resume('{{resume.id}}','{{resume}}')" tabindex="3"
+                                         class="text-gray-700 flex justify-between  px-4 py-2 text-sm leading-5 text-left focus:outline-none"  role="menuitem" style="color: red;">
+                                          
                                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="red">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                                             </svg>
+                                            Delete
                                         </button>
                                     </div>
                                 </div>
@@ -212,6 +231,8 @@
             <input type="hidden" id = "delete_resume_id" name="delete_resume_id">
             <input type="hidden" id = "delete_flag" name = "delete_flag" value = "false">
             <input type="hidden" id = "newResume" name = "newResume">
+            <input type="hidden" id = "duplicate_resume_id" name = "duplicate_resume_id" value = "-1">
+            <input type="hidden" id = "duplicate_resume_name" name = "duplicate_resume_name">
             <input type = "submit" id = "submit" name = "submit" style = "visibility: hidden;">
         </form>
     </body>
